--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "aline-ai.github.io",
   "version": "0.1.0",
+  "homepage": "https://aline-ai.github.io",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.5.5",
@@ -25,6 +26,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -42,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
